# naosoccer_sim

./: .gitmodules  CMakeLists.txt  README.md  dependencies.repos  everything_launch.py  nao.rviz  package.xml
.github/workflows/: main.yml
include/naosoccer_sim/: complementary_filter.hpp  connection.hpp  joint_pid.hpp  nao_joints_pid.hpp  nao_to_sim.hpp  naosoccer_sim.hpp  sexp_creator.hpp  sexp_parser.hpp  sim_joints.hpp  sim_to_nao.hpp  socket.hpp
joints_to_joint_state/: CMakeLists.txt  package.xml
joints_to_joint_state/src/: joints_to_joint_state.cpp
launch/: everything_launch.py  player_launch.py
nao_button_sim/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
nao_button_sim/nao_button_sim/: nao_button_sim.py
naosoccer_sim_launch/: CMakeLists.txt  package.xml
naosoccer_sim_launch/launch/: player_launch.py
rcss3d_agent/: CMakeLists.txt  README.md  package.xml
rcss3d_agent/include/rcss3d_agent/: complementary_filter.hpp  connection.hpp  deg2rad.hpp  fsr.hpp  joint_pid.hpp  nao_joints_pid.hpp  nao_to_sim.hpp  polar_to_point.hpp  rcss3d_agent.hpp  sexp_creator.hpp  sexp_parser.hpp  sim_joints.hpp  sim_to_nao.hpp  socket.hpp  socketaddress.hpp
rcss3d_agent/launch/: player_launch.py
rcss3d_agent/src/: complementary_filter.cpp  connection.cpp  nao_joints_pid.cpp  nao_to_sim.cpp  rcss3d_agent.cpp  rcss3d_agent_node.cpp  sexp_creator.cpp  sexp_parser.cpp  sim_joints.cpp  sim_to_nao.cpp  socket.cpp  socketaddress.cpp
rcss3d_agent/test/: CMakeLists.txt  test_joint_pid.cpp  test_nao_to_sim.cpp  test_polar_to_point.cpp  test_sexp_parser.cpp  test_sim_to_nao.cpp
rcss3d_nao/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcss3d_nao/include/rcss3d_nao/: complementary_filter.hpp  nao_to_sim.hpp  rcss3d_nao.hpp  sim_to_nao.hpp
rcss3d_nao/src/: complementary_filter.cpp  nao_to_sim.cpp  rcss3d_nao.cpp  rcss3d_nao_node.cpp  sim_to_nao.cpp
rcss3d_nao/test/: CMakeLists.txt  test_nao_to_sim.cpp  test_sim_to_nao.cpp
rviz/: nao.rviz
src/: ball_to_marker.cpp  complementary_filter.cpp  connection.cpp  joints_to_joint_state.cpp  nao_joints_pid.cpp  nao_to_sim.cpp  nao_to_sim_node.cpp  naosoccer_sim.cpp  naosoccer_sim_node.cpp  sexp_creator.cpp  sexp_parser.cpp  sim.cpp  sim_joints.cpp  sim_to_nao.cpp  sim_to_nao_node.cpp  socket.cpp  socketaddress.cpp  vector3_to_marker.cpp
test/: CMakeLists.txt  test_joint_pid.cpp  test_nao_to_sim.cpp  test_nao_to_sim_launch.py  test_sim_to_nao.cpp  test_sim_to_nao_launch.py
