<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcss3d_nao</name>
  <version>0.0.0</version>
  <description>Package that provides a ROS2 nao interface when connecting to rcss3d</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcss3d_controller</depend>
  <depend>sensor_msgs</depend>
  <depend>nao_sensor_msgs</depend>
  <depend>nao_command_msgs</depend>
  <depend>rcss3d_controller_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
